Bug 92037 - UI: Dragging a field from the Data Sources window into a document no longer works
Summary: UI: Dragging a field from the Data Sources window into a document no longer w...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-06-12 16:04 UTC by pierre-yves samyn
Modified: 2016-10-25 19:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2015-06-12 16:04:59 UTC
Hi

Problem description: Dragging a field from the Data Sources window into a document no longer works

Steps to reproduce:
1. File> New> Text document
2. Display the Data Sources window (menu View or F4) and select a source (e.g. Bibliography, Tables> Biblo).
3. Click a column header of a field in the data sources window and drag into the document.

Expected behavior: The dragged field should appear as a field in the document (Writer) or a form control (Calc). 
Actual behavior: Nothing happens.

Workaround (only for Writer): use the Insert> Fields> More fields, Database tab.

Another case in Writer is more awkward (because no workaround): drag and drop in conditional fields. 

Steps to reproduce:
1. Display the Data Sources view and select a source (e.g. Bibliography, Tables> Biblo).
2. Insert> Fields> More fields, Functions tab
3. Select Type: Conditional text (or Hidden text or Hidden Paragraph)
3. Click a column header of a field in the data sources window and drag into the Condition box

Expected behavior: The dragged field inserted in the box.
Actual behavior: Nothing happens.

Platform: Windows 7/64 & Version: 5.0.0.0.beta3
Build ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Locale: fr-FR (fr_FR)

Also reproduced on fr-discuss so I set status to New

Regards
Pierre-Yves
Comment 1 Cor Nouws 2015-06-12 21:45:53 UTC
reproduced on Linux.
(there was a similar bug long time ago..)
Comment 2 Terrence Enger 2015-06-14 15:05:05 UTC
Setting whiteboard bibisected and keyword bisected; adding Noel
Grandin to cc.

Working 50max bibisect repository, I see from `git bisect good` ...

    6d97afa867b5e600b8251993d389bf41e88ae831 is the first bad commit
    commit 6d97afa867b5e600b8251993d389bf41e88ae831
    Author: Matthew Francis <mjay.francis@gmail.com>
    Date:   Wed May 27 20:09:05 2015 +0800

        source-hash-fb14be5f8f74f83ba89e15f891ddf1f753dcc62f
    
        commit fb14be5f8f74f83ba89e15f891ddf1f753dcc62f
        Author:     Noel Grandin <noel@peralex.com>
        AuthorDate: Thu Mar 12 14:53:28 2015 +0200
        Commit:     Noel Grandin <noel@peralex.com>
        CommitDate: Wed Mar 18 14:23:50 2015 +0200
    
            create new 'enum class' SotClipboardFormatId to unify types
    
            of which there are several.
    
            There are some issues here I am unsure of
            - the SW and SC and CHART2 modules essentially ignore the enum values and assign their own ids
              Perhaps I should change them to use the common values and create new enum values where necessary?
            - the sc/qa/ and sq/qa/ and starmath/qa/ code was doing some dodgy stuff. I translated the code to pass down the stuff
               numeric values to the underlying code, but perhaps further fixing is necessary?
    
            Change-Id: Ic06d723e404481e3f1bca67c43b70321b764d923

    :040000 040000 90cec370a34cb9d0565de2fcccf0bd07768ca3ba 1b64b33a6d8f0312b688376ed7ac768ad83f9fa2 M	opt

and from 'git bisect log` ...

    # bad: [dda106fd616b7c0b8dc2370f6f1184501b01a49e] source-hash-0db96caf0fcce09b87621c11b584a6d81cc7df86
    # good: [5b9dd620df316345477f0b6e6c9ed8ada7b6c091] source-hash-2851ce5afd0f37764cbbc2c2a9a63c7adc844311
    git bisect start 'latest' 'oldest'
    # good: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
    git bisect good 0c30a2c797b249d0cd804cb71554946e2276b557
    # bad: [2ce02b2ce56f12b9fcb9efbd380596975a3a5686] source-hash-17d714eef491bda2512ba8012e5b3067ca19a5be
    git bisect bad 2ce02b2ce56f12b9fcb9efbd380596975a3a5686
    # bad: [e4deb8a42948865b7b23d447c1547033cb54535b] source-hash-ce46c98dbeb3364684843daa5b269c74fce2af64
    git bisect bad e4deb8a42948865b7b23d447c1547033cb54535b
    # good: [15e8b5cc6b4784fecd63b2a5a04ac086b3e9fc01] source-hash-26b500afcaed704db7a300836f466517c309ee77
    git bisect good 15e8b5cc6b4784fecd63b2a5a04ac086b3e9fc01
    # bad: [73235831b07a9812413e0b0f5d0ba24b89206933] source-hash-6934ad423afd43d4d5c3788d0c020164309aaffa
    git bisect bad 73235831b07a9812413e0b0f5d0ba24b89206933
    # good: [dfc554b5db5524f4a3c4b0c9c74fceffb4b72308] source-hash-d4267231754c1e6b03c7723a6fecc46750e7c780
    git bisect good dfc554b5db5524f4a3c4b0c9c74fceffb4b72308
    # bad: [ef2fab55f93993a74ca27fddb3a18cf9164a1932] source-hash-144ab285566afa18790356b5497573290ee710bf
    git bisect bad ef2fab55f93993a74ca27fddb3a18cf9164a1932
    # good: [43807575eac7b39e7d7b33113ecf26060bc93ca5] source-hash-bf56e080cc092cacc779add9dfc7e7df291eef41
    git bisect good 43807575eac7b39e7d7b33113ecf26060bc93ca5
    # bad: [81b61a9c4d6ae4a7bbc46ed0920daee19eadb81d] source-hash-2e46594e7f31a7124defe6a05a3e4690a5bfa012
    git bisect bad 81b61a9c4d6ae4a7bbc46ed0920daee19eadb81d
    # good: [2ef92d81cab9c4912cf1c4807bedffde3745a6ef] source-hash-1f11bd90b6d43eee382d54a3041b1e1eb2a6af27
    git bisect good 2ef92d81cab9c4912cf1c4807bedffde3745a6ef
    # bad: [2bcfbe35950bf98fd957ad20ed0dbc7b2ef39b6b] source-hash-34dc97c79165a038fd1262902a414fe78882aaba
    git bisect bad 2bcfbe35950bf98fd957ad20ed0dbc7b2ef39b6b
    # bad: [6d97afa867b5e600b8251993d389bf41e88ae831] source-hash-fb14be5f8f74f83ba89e15f891ddf1f753dcc62f
    git bisect bad 6d97afa867b5e600b8251993d389bf41e88ae831
    # good: [494d27d925c3d371fca8b742d56d14b728fad536] source-hash-b8ce52aab9459773544f1696cfe6b7b6f171a389
    git bisect good 494d27d925c3d371fca8b742d56d14b728fad536
    # first bad commit: [6d97afa867b5e600b8251993d389bf41e88ae831] source-hash-fb14be5f8f74f83ba89e15f891ddf1f753dcc62f
Comment 3 Michael Meeks 2015-06-20 21:15:13 UTC
Noel - any thoughts and/or progress on this one ? ... I guess it'd be good to confirm it is exactly this one commit that caused the grief. I've read that commit through - and while it touches exactly this area - its too big to see what's going on. I guess this needs chasing down with some root cause analysis & then back up to fix any other related issues; Noel ? =)
Comment 4 Commit Notification 2015-06-22 13:21:00 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1bcf792993c3d88acfd7ede4567701c5dd6e7e62

tdf#92037 fix dragging DataSources field into document

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-06-22 15:14:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a2c1393dcc950516bcc85470121e6d46e1c2b73&h=libreoffice-5-0

tdf#92037 fix dragging DataSources field into document

It will be available in 5.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Terrence Enger 2015-06-24 13:54:14 UTC
In the daily dbgutil bibisect reository version 2015-06-24 ...
    Version: 5.1.0.0.alpha1+
    Build ID: 2135fe0cef7bcf7160719f1f29ad65f2b064984b
    Locale: en-CA (en_CA.UTF-8)
the attempt to drag a column heading from the database preview pane
into the document does nothing.  In particular, the mouse cursor
continues to be the northwest-pointing arrow.

On Windows Vista, with daily build from 2015-06-24 ...
    Version: 5.1.0.0.alpha1+
    Build ID: 89b5967658392d27fb3147e85abb2b5c1c34b101
    TinderBox: Win-x86@39, Branch:master, Time: 2015-06-24_04:10:17
    Locale: en-CA (en_CA)
the cursor changes to the expected "dragging" cursor (arrow plus
shadowed rectanble plus boxed plus-sign), but dropping it in the
document are does nothing.

I am setting status REOPENED.
Comment 7 pierre-yves samyn 2015-08-09 07:45:03 UTC
Hi

(In reply to Terrence Enger from comment #6)
> I am setting status REOPENED.

Thank you for reopening.

Also still reproduced on windows & Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: fr-FR (fr_FR)

Regards
Pierre-Yves
Comment 8 Cor Nouws 2015-09-12 21:12:09 UTC
Works fine in 5.0.2.1
(and maybe earlier too - didn't check) but clearly the patch landed at the proper place :)
Comment 9 pierre-yves samyn 2015-09-13 04:32:14 UTC
Hi

Verified on windows 7/64 Version: 5.0.2.1
Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7
Locale: fr-FR (fr_FR)

Thank you :)

Regards
Pierre-Yves
Comment 10 Robinson Tryon (qubit) 2015-12-17 09:13:34 UTC Comment hidden (obsolete)