tdf#92037 fix dragging DataSources field into document

Bug introduced by my commit fb14be5f8f74f83ba89e15f891ddf1f753dcc62f
"create new 'enum class' SotClipboardFormatId to unify types"

Change-Id: I7347fb9e653077205476e2b0c2b8107dc9caae0e
Reviewed-on: https://gerrit.libreoffice.org/16396
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>